--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 31: Sinking - Clairo
+          Week 32: Riot - Hugh Masekela
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.6/10</h2>
+            <h2 id="rating">Overall Rating: 7.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7BQWJDX9GGqq3D6ezggaqB?si=b5761c4af7f74773"
+                    href="https://open.spotify.com/track/0M433gqUejjCujkzISWinQ?si=8ccbd52538d94be4"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=G64_xr3nf44"
+                    href="https://www.youtube.com/watch?v=Ps7J8caAVWk"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I think the lyricism in this song is so beautiful and the soothing
-              humming throughout the background of this song makes it all the
-              more enjoyable to me.
+              It would be hard to pick out any other piece of this song than the
+              very bold tumpeteering of Hugh Masekela. I especially enjoy the
+              run he makes towards the end.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Although its not the underground discovery I would like to hold as
-              my golden standard for indie pop albums, Clairo's massively
-              popular "Immunity" is my standout favorite of the genre. This
-              track has always been a favorite of mine, but my love has
-              resurfaced stronger than ever for this floating yet tragic
-              arrangement. Give it one, two, or three listens, and I emplore you
-              to not stop there. Make it a great week!
+              I was using the new (idiotic and deceptive) spotify "AI DJ" this
+              week and this song struck me as very very familiar. Of course, the
+              close reconstruction of the same title by Earl Sweatshirt from my
+              very favorite album of his, "Some Rap Songs", is where the
+              familiarity stems from. This version I am inclined to prefer, but
+              I will cherish them seperately. Give this one a listen and make it
+              a great week!
             </p>
           </div>
         </div>
@@ -368,6 +368,11 @@
               <td>30</td>
               <td>3 Boys - Omar Apollo</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>31</td>
+              <td>Sinking - Clairo</td>
+              <td>8.6/10</td>
             </tr>
           </table>
         </div>
