--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 32: Riot - Hugh Masekela
+          Week 33: Love Drought - Beyonce
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.7/10</h2>
+            <h2 id="rating">Overall Rating: 9.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0M433gqUejjCujkzISWinQ?si=8ccbd52538d94be4"
+                    href="https://open.spotify.com/track/2RQAG0wQt35UzAPEyVJFWN?si=a60dc1fd21444009"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=Ps7J8caAVWk"
+                    href="https://www.youtube.com/watch?v=CUyQSKe75L4"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,17 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              It would be hard to pick out any other piece of this song than the
-              very bold tumpeteering of Hugh Masekela. I especially enjoy the
-              run he makes towards the end.
+              I love the little whistle melody in the background of this song
+              and how it's contrasted by the overly punchy 808's. Listen for the
+              exposed melody at the beginning and end of this track.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I was using the new (idiotic and deceptive) spotify "AI DJ" this
-              week and this song struck me as very very familiar. Of course, the
-              close reconstruction of the same title by Earl Sweatshirt from my
-              very favorite album of his, "Some Rap Songs", is where the
-              familiarity stems from. This version I am inclined to prefer, but
-              I will cherish them seperately. Give this one a listen and make it
-              a great week!
+              Beyonce's magnum opus, in my opinion, will always be "Lemonade"
+              (although her new record comes close). This track plays like an
+              extended interlude and I haven't given it much attention in my
+              many listens of this album, but this week I found joy in it; I
+              hope you do too. Make it a great week!
             </p>
           </div>
         </div>
@@ -373,6 +371,11 @@
               <td>31</td>
               <td>Sinking - Clairo</td>
               <td>8.6/10</td>
+            </tr>
+            <tr>
+              <td>32</td>
+              <td>Riot - Hugh Masekela</td>
+              <td>7.7/10</td>
             </tr>
           </table>
         </div>
