--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 33: Love Drought - Beyonce
+          Week 34: BITE - Baird
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.3/10</h2>
+            <h2 id="rating">Overall Rating 8.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2RQAG0wQt35UzAPEyVJFWN?si=a60dc1fd21444009"
+                    href="https://open.spotify.com/track/2tUqgzXUa4tqj2fRdPVtFX?si=2c3a2cfe3c3d4dd2"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=CUyQSKe75L4"
+                    href="https://www.youtube.com/watch?v=IbtFEOgcDDY"
                     target="_blank"
                     ><center>
                       <img
@@ -113,17 +113,18 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I love the little whistle melody in the background of this song
-              and how it's contrasted by the overly punchy 808's. Listen for the
-              exposed melody at the beginning and end of this track.
+              I like the almost earthy feel of the background percussion,
+              specifically the two consecutive notes of a marimba buried
+              somewhere in there, try to listen for it if you dare.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Beyonce's magnum opus, in my opinion, will always be "Lemonade"
-              (although her new record comes close). This track plays like an
-              extended interlude and I haven't given it much attention in my
-              many listens of this album, but this week I found joy in it; I
-              hope you do too. Make it a great week!
+              I won't be ashamed to admit that this is the only song I've ever
+              listened to of Baird's. My strong acquaintance Felix Fuentes
+              played this little song for me on Friday, and I was struck with a
+              nice nostalgia and relaxation (thanks mostly to that marimba).
+              Anyways, give this one a listen and maybe try out some other Baird
+              songs, too, if you enjoy it! Make it a great week.
             </p>
           </div>
         </div>
@@ -157,18 +158,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Kinzey Eastin: Casimir Pulaski Day - Sufjan Stevens
+            Amber Chen: I Will - Mitski
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.8/10</h2>
+              <h2 id="rating">Overall Rating 9.7/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/53TIOhzNpRpl8xKdscSQSv?si=f57c81eaf58a48c1"
+                    href="https://open.spotify.com/track/2yYP6zjOBqGKqI6s2lZyer?si=4bab599d36364815"
                     target="_blank"
                     ><center>
                       <img
@@ -182,7 +183,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=TfEkDqP34xo"
+                    href="https://www.youtube.com/watch?v=ODPra5VxNLI"
                     target="_blank"
                     ><center>
                       <img
@@ -199,14 +200,19 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This semi-autobiographical song tells a story of the narrator’s
-            friend dying from bone cancer, and the way that it complicates his
-            relationship with God. Sufjan Stevens creates a very simple
-            production, with most of the song containing just an acoustic guitar
-            and letting the lyrics take you through the story, ending with a
-            beautiful arrangement of horns and vocals. It is one of my favorite
-            songs of all time, with an incredible mix of musicianship and
-            songwriting.
+            Although it’s no longer my favorite song, I Will always holds a
+            special place in my heart. Mitski wrote it as a love song she wished
+            to hear from someone else, full of tender acts of service and a warm
+            sense of belonging. It’s not about falling in love but rather the
+            act of loving, including washing a lover’s hair and caring for
+            someone through the night. She finds the vulnerabilities of devotion
+            and presents them as a brave promise to love in spite of everything.
+            The lyrics are paired with a simplistic instrumental and yearning
+            vocals that burst into a gentle desire, making the audience
+            understand how intimate loving can be. I Will has come to
+            encapsulate my entire understanding of love as I’ve grown throughout
+            the years and continues to bring me a deep sense of fondness like no
+            other.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -376,6 +382,11 @@
               <td>32</td>
               <td>Riot - Hugh Masekela</td>
               <td>7.7/10</td>
+            </tr>
+            <tr>
+              <td>33</td>
+              <td>Love Drought - Beyonce</td>
+              <td>9.3/10</td>
             </tr>
           </table>
         </div>
