--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 34: BITE - Baird
+          Week 34: Lydia Wears A Cross - Julia Jacklin
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.2/10</h2>
+            <h2 id="rating">Overall Rating 8.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2tUqgzXUa4tqj2fRdPVtFX?si=2c3a2cfe3c3d4dd2"
+                    href="https://open.spotify.com/track/39Xue5JNMm2yLvIma6Ut8u?si=fe3408634faf4688"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=IbtFEOgcDDY"
+                    href="https://www.youtube.com/watch?v=4D6buHQYhUI"
                     target="_blank"
                     ><center>
                       <img
@@ -113,18 +113,17 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I like the almost earthy feel of the background percussion,
-              specifically the two consecutive notes of a marimba buried
-              somewhere in there, try to listen for it if you dare.
+              At 2:34, there's an occurence of what I can only describe as the
+              beat drop of Folk and Indie music. As a drummer in some past life,
+              I really appreciate this finishing lick.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I won't be ashamed to admit that this is the only song I've ever
-              listened to of Baird's. My strong acquaintance Felix Fuentes
-              played this little song for me on Friday, and I was struck with a
-              nice nostalgia and relaxation (thanks mostly to that marimba).
-              Anyways, give this one a listen and maybe try out some other Baird
-              songs, too, if you enjoy it! Make it a great week.
+              Okay, real quick, listen to the start of this song. Now, listen to
+              I Wouldn't Ask You by Clairo. It's very much the same, right?
+              Anyways, thank you to those who reintroduced me to this song, you
+              know who you are. What a beautiful song, listen to it while
+              admiring God's green earth. And as always, make it a great week!
             </p>
           </div>
         </div>
@@ -387,6 +386,11 @@
               <td>33</td>
               <td>Love Drought - Beyonce</td>
               <td>9.3/10</td>
+            </tr>
+            <tr>
+              <td>34</td>
+              <td>BITE - Baird</td>
+              <td>8.2/10</td>
             </tr>
           </table>
         </div>
