--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 34: Lydia Wears A Cross - Julia Jacklin
+          Week 35: I Don't Know You - The Marías
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.3/10</h2>
+            <h2 id="rating">Overall Rating 9.1/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/39Xue5JNMm2yLvIma6Ut8u?si=fe3408634faf4688"
+                    href="https://open.spotify.com/track/4cJOLN346rtOty3UPACsao?si=30c2b37a12484a40"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=4D6buHQYhUI"
+                    href="https://www.youtube.com/watch?v=YzKM5g_FwYU"
                     target="_blank"
                     ><center>
                       <img
@@ -113,17 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              At 2:34, there's an occurence of what I can only describe as the
-              beat drop of Folk and Indie music. As a drummer in some past life,
-              I really appreciate this finishing lick.
+              Throughout the song, the emphasizing guitar strokes will sync up
+              with and melt into the cadence of the vocals, creating a very
+              pleasing yet temporary unification of the background and
+              foreground of the track.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Okay, real quick, listen to the start of this song. Now, listen to
-              I Wouldn't Ask You by Clairo. It's very much the same, right?
-              Anyways, thank you to those who reintroduced me to this song, you
-              know who you are. What a beautiful song, listen to it while
-              admiring God's green earth. And as always, make it a great week!
+              My new love, The Marías! Their debut EP from which "I Don't Know
+              You" originates, "Superclean, Vol. I", is my favorite of their
+              projects so far (I haven't listened to them all). This song in
+              particular stands out; I would consider it in my top 10 opening
+              tracks. Listen to this one and just try not not get hypnotized,
+              but most importantly, mkae it a great week!
             </p>
           </div>
         </div>
@@ -391,6 +393,11 @@
               <td>34</td>
               <td>BITE - Baird</td>
               <td>8.2/10</td>
+            </tr>
+            <tr>
+              <td>35</td>
+              <td>Lydia Wears A Cross - Julia Jacklin</td>
+              <td>8.3/10</td>
             </tr>
           </table>
         </div>
