--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 35: I Don't Know You - The Marías
+          Week 36: SAN FRANCISCO SIDEWALK - Tiffany Day
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.1/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4cJOLN346rtOty3UPACsao?si=30c2b37a12484a40"
+                    href="https://open.spotify.com/track/1EgT600glf6aCE9GAQkgm2?si=805a88bad636468a"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=YzKM5g_FwYU"
+                    href="https://www.youtube.com/watch?v=MzkQVaiAlrE"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,17 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Throughout the song, the emphasizing guitar strokes will sync up
-              with and melt into the cadence of the vocals, creating a very
-              pleasing yet temporary unification of the background and
-              foreground of the track.
+              I like the instrumental parts of this song a lot, specifically the
+              chopped up vocalizations in the middle and end of the track. This
+              song, in general, is very addictive.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              My new love, The Marías! Their debut EP from which "I Don't Know
-              You" originates, "Superclean, Vol. I", is my favorite of their
-              projects so far (I haven't listened to them all). This song in
-              particular stands out; I would consider it in my top 10 opening
-              tracks. Listen to this one and just try not not get hypnotized,
-              but most importantly, mkae it a great week!
+              This is one of Tiffany Day's newer singles, but I've really come
+              to enjoy all of her limited discography (thanks Halley \o/ ). I've
+              slowly been reentering my electronic bedroom pop era and it's been
+              exponentiated by this song alone. Give it a listen on a lovely
+              spring day, and make it a good week!
             </p>
           </div>
         </div>
@@ -398,6 +396,11 @@
               <td>35</td>
               <td>Lydia Wears A Cross - Julia Jacklin</td>
               <td>8.3/10</td>
+            </tr>
+            <tr>
+              <td>36</td>
+              <td>I Don't Know You - The Marías</td>
+              <td>9.1/10</td>
             </tr>
           </table>
         </div>
