--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 36: SAN FRANCISCO SIDEWALK - Tiffany Day
+          Week 38: Skyline To - Frank Ocean
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 9.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/1EgT600glf6aCE9GAQkgm2?si=805a88bad636468a"
+                    href="https://open.spotify.com/track/4xR3MAscflQ262kMeiKshQ?si=4a0010dabacd477c"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=MzkQVaiAlrE"
+                    href="https://www.youtube.com/watch?v=CtkUJb22oSQ"
                     target="_blank"
                     ><center>
                       <img
@@ -113,17 +113,28 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I like the instrumental parts of this song a lot, specifically the
-              chopped up vocalizations in the middle and end of the track. This
-              song, in general, is very addictive.
+              While I usually pick out a specific sonic element to praise for
+              this section, my favorite part about this song is the way it makes
+              me feel. It's every collective summer night passing by, but
+              finding a moment of peace in that rapid passing of time. I can't
+              explain why it has this effect on me, but I hope you feel it too.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This is one of Tiffany Day's newer singles, but I've really come
-              to enjoy all of her limited discography (thanks Halley \o/ ). I've
-              slowly been reentering my electronic bedroom pop era and it's been
-              exponentiated by this song alone. Give it a listen on a lovely
-              spring day, and make it a good week!
+              Firstly, the bridge halfway into this song sounds like a Mort
+              Garson composition, listen to any song from "Mother Earth's
+              Plantasia", it's so etherial. As far as this track goes, I could
+              talk for hours. Although it's not contending for a spot in the top
+              5 tracks from "Blonde" (10/10 album) because of its one-note
+              nature, it does that one note superbly. "Summer's not as long as
+              it used to be" is not only my favorite lyric from this song, but
+              also sums up its storyline pretty well. The distortion of time is
+              felt with both the lyrics and melody, both desired and undesired.
+              This distortion is particularly effective in my impatient waiting
+              for summer. As I listen to "Skyline To" repeatedly while writing
+              this review, I'm also repeatingly talking myself down from the
+              massive FOMO of missing Frank Ocean's Coachella performance in
+              about 5 hours. Listen to this song, you will understand.
             </p>
           </div>
         </div>
@@ -157,18 +168,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Amber Chen: I Will - Mitski
+            Dallin Corless: Wet - Dazey and the Scouts
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.7/10</h2>
+              <h2 id="rating">Overall Rating 7.9/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2yYP6zjOBqGKqI6s2lZyer?si=4bab599d36364815"
+                    href="https://open.spotify.com/track/7yBjQ29XKxHlxuqycHuvmm?si=c078cd1e5772492d"
                     target="_blank"
                     ><center>
                       <img
@@ -182,7 +193,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=ODPra5VxNLI"
+                    href="https://www.youtube.com/watch?v=xnf9c6wyxRw"
                     target="_blank"
                     ><center>
                       <img
@@ -199,19 +210,19 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Although it’s no longer my favorite song, I Will always holds a
-            special place in my heart. Mitski wrote it as a love song she wished
-            to hear from someone else, full of tender acts of service and a warm
-            sense of belonging. It’s not about falling in love but rather the
-            act of loving, including washing a lover’s hair and caring for
-            someone through the night. She finds the vulnerabilities of devotion
-            and presents them as a brave promise to love in spite of everything.
-            The lyrics are paired with a simplistic instrumental and yearning
-            vocals that burst into a gentle desire, making the audience
-            understand how intimate loving can be. I Will has come to
-            encapsulate my entire understanding of love as I’ve grown throughout
-            the years and continues to bring me a deep sense of fondness like no
-            other.
+            Last time I did csotw, I reported on maybe one of the best songs
+            ever written. So this time I figured id just cover this silly little
+            bop I've been back into recently (lk thanks to a tiktok micro
+            trend). I love this song because you can really feel the amount of
+            fun the artists had recording it. It manages to feel moody and a
+            little expressive while still remaining light hearted and upbeat
+            thru its use of raunchy metaphors and catchy melodies, mimicking the
+            sound of crying during the chorus. Lyrically, it just doesn't take
+            itself that seriously, almost adapting a dissociative, laissez faire
+            attitude towards the perils of a relationship. Sonically the song is
+            aggressively fast paced, always keeping your interest. The song
+            really does feel like that classic alt/punk pop an angsty
+            protagonist would make in a coming of age movie and I love it.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -401,6 +412,11 @@
               <td>36</td>
               <td>I Don't Know You - The Marías</td>
               <td>9.1/10</td>
+            </tr>
+            <tr>
+              <td>37</td>
+              <td>SAN FRANCISCO SIDEWALK - Tiffany Day</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
