--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 38: Skyline To - Frank Ocean
+          Week 39: Obtener un Si - Shakira
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.4/10</h2>
+            <h2 id="rating">Overall Rating 9.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4xR3MAscflQ262kMeiKshQ?si=4a0010dabacd477c"
+                    href="https://open.spotify.com/track/5JwZwNT0SyOZlErdpvdEg3?si=ea8d367ea4754d58"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=CtkUJb22oSQ"
+                    href="https://www.youtube.com/watch?v=H3-PsIwmF94"
                     target="_blank"
                     ><center>
                       <img
@@ -113,28 +113,22 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              While I usually pick out a specific sonic element to praise for
-              this section, my favorite part about this song is the way it makes
-              me feel. It's every collective summer night passing by, but
-              finding a moment of peace in that rapid passing of time. I can't
-              explain why it has this effect on me, but I hope you feel it too.
+              There's honestly so much to love here so let me list them for you:
+              Shakira's vocals are truly so unique and her range is displayed
+              immaculately here, the bridge with just whistling flutes and short
+              synth strokes is so cool, and that finalizing 'duh duh duh' of the
+              track really does it for me.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Firstly, the bridge halfway into this song sounds like a Mort
-              Garson composition, listen to any song from "Mother Earth's
-              Plantasia", it's so etherial. As far as this track goes, I could
-              talk for hours. Although it's not contending for a spot in the top
-              5 tracks from "Blonde" (10/10 album) because of its one-note
-              nature, it does that one note superbly. "Summer's not as long as
-              it used to be" is not only my favorite lyric from this song, but
-              also sums up its storyline pretty well. The distortion of time is
-              felt with both the lyrics and melody, both desired and undesired.
-              This distortion is particularly effective in my impatient waiting
-              for summer. As I listen to "Skyline To" repeatedly while writing
-              this review, I'm also repeatingly talking myself down from the
-              massive FOMO of missing Frank Ocean's Coachella performance in
-              about 5 hours. Listen to this song, you will understand.
+              I have no idea what it was that prompted to me to search the
+              depths of Shakira's discography this week, but I'm so glad I have
+              discovered this new favorite of mine. Shakira's essense is very
+              Spring-like to me I think, and I am wearing red today which is by
+              FAR the most Shakira color (also this album cover is red).
+              Anyways, enjoy this one on a hopefully lovely spring afternoon, I
+              really think it is a crowd pleaser in that there is something for
+              everyone here. As always, make the best of this week!
             </p>
           </div>
         </div>
@@ -417,6 +411,11 @@
               <td>37</td>
               <td>SAN FRANCISCO SIDEWALK - Tiffany Day</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>38</td>
+              <td>Skyline To - Frank Ocean</td>
+              <td>9.4/10</td>
             </tr>
           </table>
         </div>
