--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 39: Obtener un Si - Shakira
+          Week 40: Barely on My Mind - The Regrettes
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.0/10</h2>
+            <h2 id="rating">Overall Rating 8.5/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5JwZwNT0SyOZlErdpvdEg3?si=ea8d367ea4754d58"
+                    href="https://open.spotify.com/track/7mrEpwmQJ7qK1ik7ZjjcdD?si=edc10970bcc74c1a"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=H3-PsIwmF94"
+                    href="https://www.youtube.com/watch?v=5RKgmVpkKgU"
                     target="_blank"
                     ><center>
                       <img
@@ -113,22 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              There's honestly so much to love here so let me list them for you:
-              Shakira's vocals are truly so unique and her range is displayed
-              immaculately here, the bridge with just whistling flutes and short
-              synth strokes is so cool, and that finalizing 'duh duh duh' of the
-              track really does it for me.
+              The chorus is pure addiction here so I just must pick that as my
+              favorite part. Lydia Night's smooth but slightly gravelly voice is
+              perfect for this pop-punk type of song.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I have no idea what it was that prompted to me to search the
-              depths of Shakira's discography this week, but I'm so glad I have
-              discovered this new favorite of mine. Shakira's essense is very
-              Spring-like to me I think, and I am wearing red today which is by
-              FAR the most Shakira color (also this album cover is red).
-              Anyways, enjoy this one on a hopefully lovely spring afternoon, I
-              really think it is a crowd pleaser in that there is something for
-              everyone here. As always, make the best of this week!
+              Yea so shout out to my friends for bombarding me with the
+              Regrettes until they stuck. I've listened to the most recent two
+              of their studio albums with a HEAVY intention of completing the
+              trio soon. The sound they bring in this song isn't even my
+              favorite of their pretty diverse lineup, but it's so so catchy and
+              I just couldn't get enough this week. Give this one a listen and
+              make it a great week!
             </p>
           </div>
         </div>
@@ -416,6 +413,11 @@
               <td>38</td>
               <td>Skyline To - Frank Ocean</td>
               <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>39</td>
+              <td>Obtener un Si - Shakira</td>
+              <td>9.0/10</td>
             </tr>
           </table>
         </div>
