--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 40: Barely on My Mind - The Regrettes
+          Week 41: Just Shy of Sure - The Beths
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.5/10</h2>
+            <h2 id="rating">Overall Rating 9.1/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7mrEpwmQJ7qK1ik7ZjjcdD?si=edc10970bcc74c1a"
+                    href="https://open.spotify.com/track/3sZ53IbCqyRxcHuT8eZMFA?si=8285e3bb7bb44087"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=5RKgmVpkKgU"
+                    href="https://www.youtube.com/watch?v=SzGdv-PmLVo"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,24 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The chorus is pure addiction here so I just must pick that as my
-              favorite part. Lydia Night's smooth but slightly gravelly voice is
-              perfect for this pop-punk type of song.
+              For this song, my favorite part is, simply, the chorus. Elizabeth
+              Stoke's vocals on all of The Beth's songs are so gorgeous and this
+              one is no different (I like the subtle New Zealand-ness of her
+              voice). Everything just comes together here in the chorus and I
+              cannot get enough this week.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Yea so shout out to my friends for bombarding me with the
-              Regrettes until they stuck. I've listened to the most recent two
-              of their studio albums with a HEAVY intention of completing the
-              trio soon. The sound they bring in this song isn't even my
-              favorite of their pretty diverse lineup, but it's so so catchy and
-              I just couldn't get enough this week. Give this one a listen and
-              make it a great week!
+              Sticking to my recent alternative indie obsession, we come to The
+              Beths this week! I finally got around to listening to "Jump Rope
+              Gazers" this week while studying for finals and WOW!!! It now
+              reigns supreme over their other two studio albums for me. This
+              song in particular has rocketed upwards in heavy contention for my
+              favorite of this band. I'm a sucker for tragic songs disguised by
+              catchy choruses and upbeat melodies, and this track really checks
+              all my boxes in that regard. Give this one a listen, whether sad
+              or happy, and make the best of your week no matter the
+              circumstances.
             </p>
           </div>
         </div>
@@ -418,6 +423,11 @@
               <td>39</td>
               <td>Obtener un Si - Shakira</td>
               <td>9.0/10</td>
+            </tr>
+            <tr>
+              <td>40</td>
+              <td>Barely on My Mind - The Regrettes</td>
+              <td>8.5/10</td>
             </tr>
           </table>
         </div>
